# Black-Swan

./: .commit_template  .gitignore  README.md  config.yaml  requirements.txt
config/: config.example.yaml  config.yaml
data/: ada_prices.json  btc_prices.json  eth_prices.json  ltc_prices.json  news.json  sol_prices.json  strategy_stats.json  xrp_prices.json
docs/: api-reference.md  architecture.md  backend-ui-connection.md
docs/usage/: ui-connection.md
kraken_ws/: __init__.py  account.py  kraken_ws.py  markets.py
resources/: manager.py
resources/data/settings/: settings.yaml
rust_client/: Cargo.toml  pyproject.toml
rust_client/src/: binance_api.rs  kraken_api.rs  lib.rs
rust_client/src/kraken/: account.rs  markets.rs  mod.rs
rust_ws_py/: Cargo.toml
rust_ws_py/src/: lib.rs
src/: config_loader.py  kraken_api.py  main.py  trader.py
src/clients/: kraken_python_client.py  kraken_sync_client.py
src/handler/: CommandHandler.py
src/strategies/: rsi.py  sma.py
src/utils/: account_tools.py  helpers.py  plotter.py  settings_loader.py
terminal/: app.py
tests/: test_api.py  test_kraken_client.py  test_rust_client.py  test_strategy.py
tests/api/: kraken.py  kraken2.py  test_rust_apis.py
tests/ui/: run_ui.py
ui/: app.py  debugger.py  dummy_data.py  index.html  package-lock.json  package.json
ui/data/: ada_prices.json  btc_prices.json  commodities_market.json  crypto_market.json  eth_prices.json  indices_market.json  ltc_prices.json  news.json  positions.json  sol_prices.json  strategy_pnl.json  strategy_stats.json  xrp_prices.json
ui/data_temp/: ada_prices.json  btc_prices.json  eth_prices.json  ltc_prices.json  sol_prices.json  xrp_prices.json
ui/src/: App.css  App.tsx
ui/terminal/: input.py
(+17 files in other folders)
