[package]
name = "rust_kraken_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_kraken_client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hmac = "0.12.1"
sha2 = "0.10"
base64 = "0.22.1"
url = "2.5.4"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }

# Optional dependencies for YAML parsing and async
# Remove if not necessary
# yaml-rust = "0.4"
# once_cell = "1.18"

[build-dependencies]
