[package]
name = "rust_ws_py"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tungstenite = "0.21"
url = "2.5"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }


[lib]
crate-type = ["cdylib"]
